# HujiOS

./: .gitignore  README.md
Project-Ex1/: README  README.MD  README.md  ex1.tar
Project-Ex1/Assignment1/: .gdb_history
Project-Ex1/Assignment2/: Makefile  README  ex1.tar  kerbels_runner.cpp  osm.cpp  osm.h  osm.s
Project-Ex1/Kerbels-Sol-LearnFromIt/: CMakeLists.txt  Makefile  README  container-measurements.csv  graph.ipynb  osm.cpp  osm.h  pond-measurements.csv  runner.cpp  vm-measurements.csv
Project-Ex1/Olivers-Template-C++17/: osm.cpp
Project-Ex2/: Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h  demo_singInt_handler.c  thread.h  uthread.cpp  uthread_exception.cpp  uthread_exception.h  uthread_utilities.cpp  uthread_utilities.h  uthreads.h
Project-Ex2/submission/: Makefile  README  Scheduler.cpp  Scheduler.h  Thread.cpp  errors  ex2.tar  test2_output  testing_output  tests_output  thread.h  uthread.cpp  uthread_exception.cpp  uthread_exception_rmv.h  uthread_utilities.cpp  uthread_utilities.h  uthreads.cpp  uthreads.h
Project-Ex3/: Barrier.cpp  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  exceptions.cpp  exceptions.h  job_context.cpp  job_context.h  thread_context.cpp  thread_context.h
Project-Ex4/: CMakeLists.txt  Makefile  MemoryConstants.h  PhysicalMemory.cpp  README  VirtualMemory.cpp  ex4.tar
Project-Ex5/: .gitignore  CMakeLists.txt  Makefile  README
Project-Ex5/src/: Makefile  client.h  command.h  container.cpp  prints.h  server.h  socket.h  sockets.cpp  utilities.h
Project-Ex5/tests/: test_containers.py
(+54 files in other folders)
